--- a/home1.html
+++ b/home1.html
@@ -22,8 +22,8 @@
                         <span class="icon-bar"></span>
                     </button>
                     <a class="navbar-brand" href="#"><img src="assets/images/app-logo.png" class="logo-top" alt="AppBakerzLogo"/></a>
+                </div> <!--///// .navbar-header-->
 
-                </div>
                 <div id="navbar" class="navbar-collapse collapse">
                     <ul class="nav navbar-nav">
                         <li><a href="#">HOME</a></li>
@@ -33,8 +33,8 @@
                         <li><a href="#">EVENTS</a></li>
                         <li><a href="#">CONTACT</a></li>
                     </ul>
-
                 </div><!--/.nav-collapse -->
+
                 <div class="clock pull-right">
                     <img src="assets/images/clock-icon.png" alt=""/>
                     <p>Saturday - Sunday CLOSED<br>
@@ -45,27 +45,29 @@
         </nav>
 
         <div class="main-heading">
-            <h1 class="container">APPBAKERZ CERTIFIED DEVELOPMENT SPECIALIST</h1>
+            <h1 class="container">appbakerz certified development specialist</h1>
             <div class="special-development-icons">
-                <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2 div-two-nested front-end-development">
-                    <img src="assets/images/html-css-icons.png" alt=""/>
-                    <p class="caption">FRONT-END <br> DEVELOPMENT</p>
-                </div>
-                <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2 div-two-nested js-dev">
-                    <img src="assets/images/javascript-icon.png" alt=""/>
-                    <p class="caption">JAVASCRIPT<br> DEVELOPMENT</p>
-                </div>
-                <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2 div-two-nested js-dev">
-                    <img src="assets/images/angular-icon.png" alt=""/>
-                    <p class="caption">ANGULAR JS<br> DEVELOPMENT</p>
-                </div>
-                <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2 div-two-nested js-dev">
-                    <img src="assets/images/react-main-icon.png" alt=""/>
-                    <p class="caption">REACT JS<br> DEVELOPMENT</p>
-                </div>
-                <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2 div-two-nested js-dev">
-                    <img src="assets/images/api-icon.png" alt=""/>
-                    <p class="caption">API'S <br>DEVELOPMENT</p>
+                <div class="col-lg-12 col-md-12">
+                    <div class="col-lg-offset-1 col-lg-2 col-md-2 col-sm-2 col-xs-2 div-two-nested front-end-development">
+                        <img src="assets/images/html-css-icons.png" alt=""/>
+                        <p class="caption">FRONT-END <br> DEVELOPMENT</p>
+                    </div>
+                    <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2 div-two-nested js-dev">
+                        <img src="assets/images/javascript-icon.png" alt=""/>
+                        <p class="caption">JAVASCRIPT<br> DEVELOPMENT</p>
+                    </div>
+                    <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2 div-two-nested js-dev">
+                        <img src="assets/images/angular-icon.png" alt=""/>
+                        <p class="caption">ANGULAR JS<br> DEVELOPMENT</p>
+                    </div>
+                    <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2 div-two-nested js-dev">
+                        <img src="assets/images/react-main-icon.png" alt=""/>
+                        <p class="caption">REACT JS<br> DEVELOPMENT</p>
+                    </div>
+                    <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2 col-lg-offset-1 div-two-nested js-dev">
+                        <img src="assets/images/api-icon.png" alt=""/>
+                        <p class="caption">API'S <br>DEVELOPMENT</p>
+                    </div>
                 </div>
             </div>
             <button class="btn btn-default"> ENROLL NOW</button>
@@ -81,7 +83,7 @@
     <!--////////// ABOUT SECTION//////////-->
     <div class="about-us">
         <div class="container">
-            <div class="col-lg-6 col-md-12 col-sm-12 col-xs-12 about-text">
+            <div class="col-lg-6 col-md-12 col-sm-6 col-xs-12 about-text">
                 <h2 class="container about-heading">ABOUT APPBAKERZ ACADEMY</h2>
                 <p class="container about-paragraph">AppBakerZ Pvt. Ltd. is an organization which believes in the dignity of work.
                     The beliefs are well translated into practice. This is why we receive fruitful
@@ -98,18 +100,18 @@
     <div class="third-div">
         <div class="row">
             <div class="container">
-                <div class="col-lg-4 col-md-4  col-sm-12  col-xs-12">
+                <div class="col-lg-4 col-md-4  col-sm-4  col-xs-12">
                     <span class="teachingStaff inline-block-elem"></span>
                     <span class="text-uppercase-bold">best teachers</span>
                     <span class="text-uppercase inline-block-elem tagline">from industry</span>
                 </div>
-                <div class="col-lg-4 col-md-4  col-sm-12  col-xs-12">
+                <div class="col-lg-4 col-md-4  col-sm-4  col-xs-12">
                     <span class="ourCourses inline-block-elem"></span>
                     <span class="text-uppercase-bold">best courses</span>
                     <span class="text-uppercase inline-block-elem tagline">for learners</span>
 
                 </div>
-                <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
+                <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
                     <span class="freeGuide inline-block-elem"></span>
                     <span class="text-uppercase-bold">free guidance</span>
                     <span class="text-uppercase inline-block-elem tagline-guide">from professionals</span>
@@ -124,9 +126,8 @@
     <div class="courses">
         <div class="container">
             <h1>courses</h1>
-
             <div class="portion-one">
-                <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+                <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
                     <div class="certified-dev-course-section">
                         <h5 class="text-uppercase">
                             <img src="assets/images/star-shape.png" alt=""/>
@@ -148,7 +149,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-6 col-md-12 col-sm-12 col-xs-12">
+                <div class="col-lg-6 col-md-12 col-sm-6 col-xs-12">
                     <div class="hybrid-course-section">
                         <img class="apps-icons" src="assets/images/angular-course.png" alt=""/>
                         <img class="apps-icons" src="assets/images/api-hybrid-course.png" alt=""/>
@@ -160,7 +161,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-6 col-md-12 col-sm-12 col-xs-12">
+                <div class="col-lg-6 col-md-12 col-sm-6 col-xs-12">
                     <div class="meteor-course-section">
                         <img class="apps-icons" src="assets/images/meteor-course.png" alt="">
                         <img class="apps-icons" src="assets/images/mongo-db-course.png" alt=""/>
@@ -173,9 +174,8 @@
 
                 </div>
             </div>
-
             <div class="portion-two">
-                <div class="col-lg-6 col-md-12 col-sm-12 col-xs-12">
+                <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
                     <div class=" wordpress-course-section">
                         <img class="apps-icons" src="assets/images/wordpress-course.png" alt="">
                         <img class="apps-icons" src="assets/images/php-course.png" alt="">
@@ -186,7 +186,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-6 col-md-12 col-sm-12 col-xs-12">
+                <div class="col-lg-6 col-md-12 col-sm-6 col-xs-12">
                     <div class="desktop-course-section">
                         <img class="apps-icons" src="assets/images/js-course.png" alt="">
                         <img class="apps-icons" src="assets/images/meteor-course.png" alt="">
@@ -198,10 +198,9 @@
                     </div>
                 </div>
             </div>
-
             <div class="short-courses">
                 <div class="col-lg-4 col-md-6 col-sm-6 col-xs-6">
-                    <div class=" machine-lang-short-course-section">
+                    <div class="machine-lang-short-course-section">
                         <h5 class="text-uppercase">short course</h5>
                         <h3>MACHINE LANGUAGE </h3>
                         <p>BINARY OR HEXADECIMAL INSTRUCTIONS</p>
@@ -209,17 +208,17 @@
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 col-sm-6 col-xs-6">
-                    <div class=" mean-stack-short-course-section">
+                    <div class="mean-stack-short-course-section">
                         <h5 class="text-uppercase">short course</h5>
-                        <h3>MACHINE LANGUAGE </h3>
-                        <p>BINARY OR HEXADECIMAL INSTRUCTIONS</p>
+                        <h3>MEAN STACK DEVELOPMENT </h3>
+                        <p>MONGODB,EXPRESS,ANGULAR AND NODE</p>
                         <span class="time-duration">3-MONTHS PROGRAM</span>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 col-sm-6 col-xs-6">
-                    <div class=" hybrid-apps-short-course-section">
+                    <div class="hybrid-apps-short-course-section">
                         <h5 class="text-uppercase">short course</h5>
-                        <h3>HYBRID APPS DEVELOPMENT </h3>
+                        <h3>HYBRID APP DEVELOPMENT </h3>
                         <p>EMBED HTML5 APPS INSIDE A NATIVE APP</p>
                         <span class="time-duration">3-MONTHS PROGRAM</span>
                     </div>
@@ -249,7 +248,6 @@
                     </div>
                 </div>
             </div>
-
         </div>
         <div>
             <h6 class="text-uppercase">not intrested? <a href="#">CREATE YOUR OWN COURSE!</a> </h6>
@@ -263,7 +261,6 @@
             <img src="assets/images/providing-icon.png" alt="">
             <p>PROVIDING <strong>CERTIFIED COURSES</strong> FOR BETTER FUTURE</p>
             <button type="button">enroll now!</button>
-
         </div>
     </div>
     <!--//////PROVIDING CERTIFIED COURSES FOR BETTTER FUTURE SECTION END////-->
@@ -425,32 +422,32 @@
     <div class="languages">
         <div class="container">
             <ul class="flex-container">
-                <div class="col-lg-2 col-md-2 col-sm-2 col-xs-3">
+                <div class="col-lg-2 col-md-2 col-sm-3 col-xs-3">
                     <li>
                         <img src="assets/images/drupal-icon.png" class="image-transform" />
                     </li>
                 </div>
-                <div class="col-lg-2 col-md-2 col-sm-2 col-xs-3">
+                <div class="col-lg-2 col-md-2 col-sm-3 col-xs-3">
                     <li class="lang-express">
                         <img src="assets/images/express-lang.png" class="image-transform"/>
                     </li>
                 </div>
-                <div class="col-lg-2 col-md-2 col-sm-2 col-xs-3">
+                <div class="col-lg-2 col-md-2 col-sm-3 col-xs-3">
                     <li>
                         <img src="assets/images/html-css-lang.png" class="image-transform"/>
                     </li>
                 </div>
-                <div class="col-lg-2 col-md-2 col-sm-2 col-xs-3">
+                <div class="col-lg-2 col-md-2 col-sm-3 col-xs-3">
                     <li>
                         <img src="assets/images/js-lang.png" class="image-transform"/>
                     </li>
                 </div>
-                <div class="col-lg-2 col-md-2 col-sm-2 col-xs-3">
+                <div class="col-lg-2 col-md-2 col-sm-3 col-xs-3">
                     <li class="hidden-sm hidden-xs">
                         <img src="assets/images/web-development-lang.png" class="image-transform"/>
                     </li>
                 </div>
-                <div class="col-lg-2 col-md-2 col-sm-2 col-xs-3">
+                <div class="col-lg-2 col-md-2 col-sm-3 col-xs-3">
                     <li class="hidden-sm hidden-xs">
                         <img src="assets/images/api-lang.png" class="image-transform"/>
                     </li>
@@ -458,32 +455,32 @@
             </ul>
 
             <ul class="flex-container">
-                <div class="col-lg-2 col-md-2 col-sm-2 col-xs-3">
+                <div class="col-lg-2 col-md-2 col-sm-3 col-xs-3">
                     <li>
                         <img src="assets/images/derby-lang.png" class="image-transform"/>
                     </li>
                 </div>
-                <div class="col-lg-2 col-md-2 col-sm-2 col-xs-3">
+                <div class="col-lg-2 col-md-2 col-sm-3 col-xs-3">
                     <li>
                         <img src="assets/images/api-lang.png" class="image-transform"/>
                     </li>
                 </div>
-                <div class="col-lg-2 col-md-2 col-sm-2 col-xs-3">
+                <div class="col-lg-2 col-md-2 col-sm-3 col-xs-3">
                     <li>
                         <img src="assets/images/php-lang.png" class="image-transform"/>
                     </li>
                 </div>
-                <div class="col-lg-2 col-md-2 col-sm-2 col-xs-3">
+                <div class="col-lg-2 col-md-2 col-sm-3 col-xs-3">
                     <li>
                         <img src="assets/images/react-lang.png" class="image-transform"/>
                     </li>
                 </div>
-                <div class="col-lg-2 col-md-2 col-sm-2 col-xs-3">
+                <div class="col-lg-2 col-md-2 col-sm-3 col-xs-3">
                     <li class="hidden-sm hidden-xs">
                         <img src="assets/images/angular-lang.png" class="image-transform"/>
                     </li>
                 </div>
-                <div class="col-lg-2 col-md-2 col-sm-2 col-xs-3">
+                <div class="col-lg-2 col-md-2 col-sm-3 col-xs-3">
                     <li class="hidden-sm hidden-xs">
                         <img src="assets/images/js-lang.png" class="image-transform"/>
                     </li>
@@ -491,37 +488,37 @@
             </ul>
 
             <ul class="flex-container">
-                <div class="col-lg-2 col-md-2 col-sm-2 col-xs-3">
+                <div class="col-lg-2 col-md-2 col-sm-3 col-xs-3">
                     <li>
                         <img src="assets/images/drupal-icon.png" class="image-transform"/>
                     </li>
                 </div>
 
-                <div class="col-lg-2 col-md-2 col-sm-2 col-xs-3">
+                <div class="col-lg-2 col-md-2 col-sm-3 col-xs-3">
                     <li class="lang-express">
                         <img src="assets/images/express-lang.png" class="image-transform"/>
                     </li>
                 </div>
 
-                <div class="col-lg-2 col-md-2 col-sm-2 col-xs-3">
+                <div class="col-lg-2 col-md-2 col-sm-3 col-xs-3">
                     <li>
                         <img src="assets/images/html-css-lang.png" class="image-transform"/>
                     </li>
                 </div>
 
-                <div class="col-lg-2 col-md-2 col-sm-2 col-xs-3">
+                <div class="col-lg-2 col-md-2 col-sm-3 col-xs-3">
                     <li>
                         <img src="assets/images/js-lang.png" class="image-transform"/>
                     </li>
                 </div>
 
-                <div class="col-lg-2 col-md-2 col-sm-2 col-xs-3">
+                <div class="col-lg-2 col-md-2 col-sm-3 col-xs-3">
                     <li class="hidden-sm hidden-xs">
                         <img src="assets/images/web-development-lang.png" class="image-transform"/>
                     </li>
                 </div>
 
-                <div class="col-lg-2 col-md-2 col-sm-2 col-xs-3">
+                <div class="col-lg-2 col-md-2 col-sm-3 col-xs-3">
                     <li class="hidden-sm hidden-xs">
                         <img src="assets/images/api-lang.png" class="image-transform"/>
                     </li>
@@ -529,32 +526,32 @@
            </ul>
 
             <ul class="flex-container">
-            <div class="col-lg-2 col-md-2 col-sm-2 col-xs-3">
+            <div class="col-lg-2 col-md-2 col-sm-3 col-xs-3">
                 <li class="hidden-lg hidden-md">
                     <img src="assets/images/derby-lang.png" class="image-transform"/>
                 </li>
             </div>
-            <div class="col-lg-2 col-md-2 col-sm-2 col-xs-3">
+            <div class="col-lg-2 col-md-2 col-sm-3 col-xs-3">
                 <li class="hidden-lg hidden-md">
                     <img src="assets/images/api-lang.png" class="image-transform"/>
                 </li>
             </div>
-            <div class="col-lg-2 col-md-2 col-sm-2 col-xs-3">
+            <div class="col-lg-2 col-md-2 col-sm-3 col-xs-3">
                 <li class="hidden-lg hidden-md">
                     <img src="assets/images/php-lang.png" class="image-transform"/>
                 </li>
             </div>
-            <div class="col-lg-2 col-md-2 col-sm-2 col-xs-3">
+            <div class="col-lg-2 col-md-2 col-sm-3 col-xs-3">
                 <li class="hidden-lg hidden-md">
                     <img src="assets/images/react-lang.png" class="image-transform"/>
                 </li>
             </div>
-            <div class="col-lg-2 col-md-2 col-sm-2 col-xs-3">
+            <div class="col-lg-2 col-md-2 col-sm-3 col-xs-3">
                 <li class="hidden-lg hidden-md hidden-sm hidden-xs">
                     <img src="assets/images/angular-lang.png" class="image-transform"/>
                 </li>
             </div>
-            <div class="col-lg-2 col-md-2 col-sm-2 col-xs-3">
+            <div class="col-lg-2 col-md-2 col-sm-3 col-xs-3">
                 <li class="hidden-lg hidden-md hidden-sm hidden-xs">
                     <img src="assets/images/js-lang.png" class="image-transform"/>
                 </li>
